# wiki

./: .gitignore  README.md  knowledge.db  pyproject.toml  requirements.txt
cli/: main.py
docs/: index.md
docs/notes/: git_cheatsheet.md  regex_patterns.md  visual_studio.md
docs/python/patterns/: python_regex_cheatsheet.md
docs/python/recipes/: retry_with_backoff.md
docs/wiki/notes/: llama-cpp.md  yt-dlp.md  yt-dlp_links.md  yt-dlp_links.txt
rag/: git_tools.py  hybrid_tools.py  indexer.py  intent.py  ollama_client.py  retriever.py  router.py  store.py  wiki_tools.py
scripts/: install-hooks.sh  note.ps1  note.py  note.sh  run_snippets.py  scan_links.py
scripts/git-hooks/: post-commit  pre-commit
tests/: test_intent.py  test_routing.py
tui/: app.py
