[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki"
version = "0.2.0"

[project.dependencies]
dependencies = [
	"requests",
	"rich",
	"textual",
]

[project.optional-dependencies]
dev = [
	"pytest",
]

[tool.setuptools.packages.find]
where = ["."]
