[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki"
version = "0.2.0"
description = "Wiki based off Markdown files"
requires-python = ">=3.9"

dependencies = [
	"requests",
	"rich",
	"textual",
]

[project.optional-dependencies]
dev = [
	"pytest",
]

[tool.setuptools.packages.find]
where = ["."]
